# field-carbon-model

./: .gitignore  LICENSE  README.md  REFERENCES  pyproject.toml  setup.cfg
agstack/: drivers.py  io.py  models.py  utils.py
agstack/data/: SPL4CMDL_V7_BPLUT.json  example_climatology_US-Ne3.csv
fieldcarb/: __init__.py  core.py  drivers.py  io.py  models.py  utils.py
fieldcarb/data/: SMAP_BPLUT_V7_rev_20220728.csv  SPL4CMDL_V7_BPLUT.json
notebooks/: Demo_TCF_Model_for_Two_Fields.ipynb
tests/: test_drivers_interchange.py  test_models.py  test_reference_implementation.py
