[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "field-carbon-model"
version = "0.1.0"
authors = [
    {name = "K. Arthur Endsley", email = "arthur.endsley@ntsg.umt.edu"},
    {name = "Sumer Johal", email = "sjohal@linuxfoundation.org"}
]
description = "Field-scale version of the Terrestrial Carbon Flux/ NASA SMAP L4C Model"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pdoc3>=0.9.2", "pytest>=7.3.0", "build>=0.10.0", "twine>=4.0.0"]
pyl4c = ["pyl4c>=0.16.1"]
