[metadata]
name = field-carbon-model
version = 0.1.0
author = 'K. Arthur Endsley, Sumer Johal'
author_email = 'arthur.endsley@ntsg.umt.edu
description = Field-scale version of the Terrestrial Carbon Flux/ NASA SMAP L4C Model
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = fieldcarb
py_modules = fieldcarb.core, fieldcarb.drivers, fieldcarb.utils
python_requires = >=3.8.0
install_requires =
    numpy>=1.19.0
    scipy>=1.7.0
    xarray>=0.19.0
    tqdm>=4.60.0
    fire>=0.4.0

[options.package_data]
* = data/*.csv

[options.extras_require]
docs = pdoc3>=0.9.2
pyl4c = pyl4c>=0.15.0
